--- a/admin-dashboard/health-facilities.html
+++ b/admin-dashboard/health-facilities.html
@@ -316,32 +316,12 @@
             <!-- Stats Cards Row -->
             <div class="row g-3 mb-4">
                 <!-- Total Users Card -->
-                <div class="col-md-3 col-6">
+                <div class="col-md-3 col-6"  id="hospitals-card">
                     <div class="card border-0 shadow-sm total-card">
                         <div class="card-body p-4">
                             <div class="d-flex align-items-center total-card-content">
                                 <div class="icon-circle me-3">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="48" height="39" viewBox="0 0 48 39"
-                                        fill="none">
-                                        <path
-                                            d="M23.5789 16.9038C27.817 16.9038 31.2527 13.4681 31.2527 9.22995C31.2527 4.99183 27.817 1.55615 23.5789 1.55615C19.3407 1.55615 15.9051 4.99183 15.9051 9.22995C15.9051 13.4681 19.3407 16.9038 23.5789 16.9038Z"
-                                            stroke="#9197B3" stroke-width="1.82256" />
-                                        <path opacity="0.5"
-                                            d="M30.2933 6.04744C31.3245 4.49666 33.0875 3.47461 35.0894 3.47461C38.2681 3.47461 40.8448 6.05138 40.8448 9.22996C40.8448 12.4085 38.2681 14.9853 35.0894 14.9853C33.0875 14.9853 31.3245 13.9633 30.2933 12.4125"
-                                            stroke="#9197B3" stroke-width="1.82256" />
-                                        <path opacity="0.5"
-                                            d="M17.3076 6.04744C16.2764 4.49666 14.5133 3.47461 12.5114 3.47461C9.33277 3.47461 6.7561 6.05138 6.7561 9.22996C6.7561 12.4085 9.33277 14.9853 12.5114 14.9853C14.5133 14.9853 16.2764 13.9633 17.3076 12.4125"
-                                            stroke="#9197B3" stroke-width="1.82256" />
-                                        <path opacity="0.5"
-                                            d="M40.8446 24.5776C44.21 25.3157 46.6 27.1846 46.6 29.3738C46.6 31.3484 44.6553 33.0627 41.8039 33.9213"
-                                            stroke="#9197B3" stroke-width="1.82256" stroke-linecap="round" />
-                                        <path opacity="0.5"
-                                            d="M6.75536 24.5776C3.39001 25.3157 1.00001 27.1846 1.00001 29.3738C1.00001 31.3484 2.94474 33.0627 5.79613 33.9213"
-                                            stroke="#9197B3" stroke-width="1.82256" stroke-linecap="round" />
-                                        <path
-                                            d="M23.5787 38.0073C30.9954 38.0073 37.0078 34.5716 37.0078 30.3335C37.0078 26.0953 30.9954 22.6597 23.5787 22.6597C16.1619 22.6597 10.1495 26.0953 10.1495 30.3335C10.1495 34.5716 16.1619 38.0073 23.5787 38.0073Z"
-                                            stroke="#9197B3" stroke-width="1.82256" />
-                                    </svg>
+                                    <img src="assets/hospital.png" width="50" alt="hospital">
                                 </div>
                                 <div>
                                     <h2 class="mb-0 fw-bold card-heading" id="total-hospital">0</h2>
@@ -353,20 +333,12 @@
                 </div>
 
                 <!-- Registered Users Card -->
-                <div class="col-md-3 col-6">
+                <div class="col-md-3 col-6" id="emergency-card">
                     <div class="card border-0 shadow-sm total-card">
                         <div class="card-body p-4">
                             <div class="d-flex align-items-center total-card-content">
                                 <div class="icon-circle me-3">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="0 0 46 46"
-                                        fill="none">
-                                        <path
-                                            d="M22.7817 18.9848C26.9757 18.9848 30.3757 15.5849 30.3757 11.3909C30.3757 7.19682 26.9757 3.79688 22.7817 3.79688C18.5876 3.79688 15.1877 7.19682 15.1877 11.3909C15.1877 15.5849 18.5876 18.9848 22.7817 18.9848Z"
-                                            stroke="#9197B3" stroke-width="1.82256" />
-                                        <path opacity="0.5"
-                                            d="M37.9699 33.2239C37.9699 37.9422 37.9699 41.7671 22.782 41.7671C7.59399 41.7671 7.59399 37.9422 7.59399 33.2239C7.59399 28.5056 14.3939 24.6807 22.782 24.6807C31.1701 24.6807 37.9699 28.5056 37.9699 33.2239Z"
-                                            stroke="#9197B3" stroke-width="1.82256" />
-                                    </svg>
+                                <img src="assets/siren.png" width="50" alt="Emergency">
                                 </div>
                                 <div>
                                     <h2 class="mb-0 fw-bold card-heading" id="total-emergency">0</h2>
@@ -378,26 +350,12 @@
                 </div>
 
                 <!-- DHA Users Card -->
-                <div class="col-md-3 col-6">
+                <div class="col-md-3 col-6"id="medical-card">
                     <div class="card border-0 shadow-sm total-card">
                         <div class="card-body p-4">
                             <div class="d-flex align-items-center  total-card-content">
                                 <div class="icon-circle me-3">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="46" height="47" viewBox="0 0 46 47"
-                                        fill="none">
-                                        <path
-                                            d="M17.0864 19.8076C21.2804 19.8076 24.6803 16.4077 24.6803 12.2136C24.6803 8.01957 21.2804 4.61963 17.0864 4.61963C12.8923 4.61963 9.49237 8.01957 9.49237 12.2136C9.49237 16.4077 12.8923 19.8076 17.0864 19.8076Z"
-                                            stroke="#9197B3" stroke-width="1.82256" />
-                                        <path opacity="0.5"
-                                            d="M23.7311 9.06414C24.7515 7.52949 26.4962 6.51807 28.4773 6.51807C31.6229 6.51807 34.1728 9.06803 34.1728 12.2136C34.1728 15.3591 31.6229 17.909 28.4773 17.909C26.4962 17.909 24.7515 16.8976 23.7311 15.363"
-                                            stroke="#9197B3" stroke-width="1.82256" />
-                                        <path
-                                            d="M17.0863 40.6909C24.4259 40.6909 30.3758 37.291 30.3758 33.0969C30.3758 28.9029 24.4259 25.5029 17.0863 25.5029C9.74678 25.5029 3.79688 28.9029 3.79688 33.0969C3.79688 37.291 9.74678 40.6909 17.0863 40.6909Z"
-                                            stroke="#9197B3" stroke-width="1.82256" />
-                                        <path opacity="0.5"
-                                            d="M34.173 27.4014C37.5033 28.1317 39.8685 29.9812 39.8685 32.1476C39.8685 34.1017 37.944 35.7982 35.1222 36.6478"
-                                            stroke="#9197B3" stroke-width="1.82256" stroke-linecap="round" />
-                                    </svg>
+                                    <img src="assets/flask.png" width="50" alt="Medical Labs">
                                 </div>
                                 <div>
                                     <h2 class="mb-0 fw-bold card-heading" id="total-medical-labs">0</h2>
@@ -409,26 +367,12 @@
                 </div>
 
                 <!-- DHA Users Card -->
-                <div class="col-md-3 col-6">
+                <div class="col-md-3 col-6" id="chemists-card">
                     <div class="card border-0 shadow-sm total-card">
                         <div class="card-body p-4">
                             <div class="d-flex align-items-center  total-card-content">
                                 <div class="icon-circle me-3">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="46" height="47" viewBox="0 0 46 47"
-                                        fill="none">
-                                        <path
-                                            d="M17.0864 19.8076C21.2804 19.8076 24.6803 16.4077 24.6803 12.2136C24.6803 8.01957 21.2804 4.61963 17.0864 4.61963C12.8923 4.61963 9.49237 8.01957 9.49237 12.2136C9.49237 16.4077 12.8923 19.8076 17.0864 19.8076Z"
-                                            stroke="#9197B3" stroke-width="1.82256" />
-                                        <path opacity="0.5"
-                                            d="M23.7311 9.06414C24.7515 7.52949 26.4962 6.51807 28.4773 6.51807C31.6229 6.51807 34.1728 9.06803 34.1728 12.2136C34.1728 15.3591 31.6229 17.909 28.4773 17.909C26.4962 17.909 24.7515 16.8976 23.7311 15.363"
-                                            stroke="#9197B3" stroke-width="1.82256" />
-                                        <path
-                                            d="M17.0863 40.6909C24.4259 40.6909 30.3758 37.291 30.3758 33.0969C30.3758 28.9029 24.4259 25.5029 17.0863 25.5029C9.74678 25.5029 3.79688 28.9029 3.79688 33.0969C3.79688 37.291 9.74678 40.6909 17.0863 40.6909Z"
-                                            stroke="#9197B3" stroke-width="1.82256" />
-                                        <path opacity="0.5"
-                                            d="M34.173 27.4014C37.5033 28.1317 39.8685 29.9812 39.8685 32.1476C39.8685 34.1017 37.944 35.7982 35.1222 36.6478"
-                                            stroke="#9197B3" stroke-width="1.82256" stroke-linecap="round" />
-                                    </svg>
+                                    <img src="assets/chemist.png" width="50" alt="Emergency">
                                 </div>
                                 <div>
                                     <h2 class="mb-0 fw-bold card-heading" id="total-chemists">0</h2>
@@ -464,6 +408,11 @@
                                 <i class="bi bi-plus"></i>
                             </a>
                         </div>
+                    </div>
+                    <div class="d-flex justify-content-end mb-4">
+                            <div class="search-user">
+                                <input type="text" id="search-user" class="form-control" placeholder="Search">
+                            </div>
                     </div>
 
                     <div class="facilities-table">
@@ -836,12 +785,6 @@
                                                         fill="#9197B3" stroke="#9197B3" stroke-width="1.5"
                                                         stroke-linecap="round" stroke-linejoin="round" />
                                                 </svg></button>
-                                            <button class="btn btn-sm "><svg xmlns="http://www.w3.org/2000/svg"
-                                                    width="20" height="20" viewBox="0 0 20 20" fill="none">
-                                                    <path
-                                                        d="M10.0025 17.5C8.96583 17.5 7.99083 17.3033 7.0775 16.91C6.16472 16.5161 5.37056 15.9817 4.695 15.3067C4.01944 14.6317 3.48472 13.8383 3.09083 12.9267C2.69694 12.015 2.5 11.0403 2.5 10.0025C2.5 8.96472 2.69694 7.98972 3.09083 7.0775C3.48417 6.16472 4.01778 5.37056 4.69167 4.695C5.36556 4.01944 6.15917 3.48472 7.0725 3.09083C7.98583 2.69694 8.96083 2.5 9.9975 2.5C11.0342 2.5 12.0092 2.69694 12.9225 3.09083C13.8353 3.48417 14.6294 4.01806 15.305 4.6925C15.9806 5.36694 16.5153 6.16056 16.9092 7.07333C17.3031 7.98611 17.5 8.96083 17.5 9.9975C17.5 11.0342 17.3033 12.0092 16.91 12.9225C16.5167 13.8358 15.9822 14.63 15.3067 15.305C14.6311 15.98 13.8378 16.5147 12.9267 16.9092C12.0156 17.3036 11.0408 17.5006 10.0025 17.5ZM10 16.6667C10.8139 16.6667 11.5972 16.5239 12.35 16.2383C13.1039 15.9522 13.7886 15.5372 14.4042 14.9933L5.00667 5.59667C4.47333 6.21167 4.06111 6.89583 3.77 7.64917C3.47889 8.4025 3.33333 9.18611 3.33333 10C3.33333 11.8611 3.97917 13.4375 5.27083 14.7292C6.5625 16.0208 8.13889 16.6667 10 16.6667ZM14.9933 14.4033C15.5378 13.7883 15.9525 13.1042 16.2375 12.3508C16.5236 11.5975 16.6667 10.8139 16.6667 10C16.6667 8.13889 16.0208 6.5625 14.7292 5.27083C13.4375 3.97917 11.8611 3.33333 10 3.33333C9.18278 3.33333 8.39556 3.47361 7.63833 3.75417C6.88167 4.03417 6.20111 4.45167 5.59667 5.00667L14.9933 14.4033Z"
-                                                        fill="#9197B3" />
-                                                </svg></button>
                                         </div>
                                     </td>
                 </tr>`;
@@ -1077,6 +1020,51 @@
         }
 
 
+        //  Chemists Filter
+        document.getElementById("medical-card").addEventListener("click", function () {
+            let query = 'medical labs';
+            let filteredData = allData.filter(item =>
+                item.facility_type.toLowerCase().includes(query)
+            );
+            renderTable(filteredData);
+        });
+
+        //  Chemists Filter
+        document.getElementById("emergency-card").addEventListener("click", function () {
+            let query = 'emergency';
+            let filteredData = allData.filter(item =>
+                item.facility_type.toLowerCase().includes(query)
+            );
+            renderTable(filteredData);
+        });
+
+        //  Chemists Filter
+        document.getElementById("hospitals-card").addEventListener("click", function () {
+            let query = 'hospital';
+            let filteredData = allData.filter(item =>
+                item.facility_type.toLowerCase().includes(query)
+            );
+            renderTable(filteredData);
+        });
+
+        //  Chemists Filter
+        document.getElementById("chemists-card").addEventListener("click", function () {
+            let query = 'chemists';
+            let filteredData = allData.filter(item =>
+                item.facility_type.toLowerCase().includes(query)
+            );
+            renderTable(filteredData);
+        });
+
+        //  Search Function
+        document.getElementById("search-user").addEventListener("input", function () {
+            let query = this.value.toLowerCase();
+            let filteredData = allData.filter(item =>
+                item.user.toLowerCase().includes(query)
+            );
+            renderTable(filteredData);
+        });
+
         //  Search Function
         document.getElementById("searchInput").addEventListener("input", function () {
             let query = this.value.toLowerCase();
@@ -1141,12 +1129,6 @@
                                                         d="M10 14.1665C9.6717 14.1665 9.34661 14.1018 9.04329 13.9762C8.73998 13.8506 8.46438 13.6664 8.23223 13.4343C8.00009 13.2021 7.81594 12.9265 7.6903 12.6232C7.56466 12.3199 7.5 11.9948 7.5 11.6665C7.5 11.3382 7.56466 11.0131 7.6903 10.7098C7.81594 10.4065 8.00009 10.1309 8.23223 9.89874C8.46438 9.66659 8.73998 9.48244 9.04329 9.3568C9.34661 9.23117 9.6717 9.1665 10 9.1665C10.663 9.1665 11.2989 9.4299 11.7678 9.89874C12.2366 10.3676 12.5 11.0035 12.5 11.6665C12.5 12.3295 12.2366 12.9654 11.7678 13.4343C11.2989 13.9031 10.663 14.1665 10 14.1665Z"
                                                         fill="#9197B3" stroke="#9197B3" stroke-width="1.5"
                                                         stroke-linecap="round" stroke-linejoin="round" />
-                                                </svg></button>
-                                            <button class="btn btn-sm "><svg xmlns="http://www.w3.org/2000/svg"
-                                                    width="20" height="20" viewBox="0 0 20 20" fill="none">
-                                                    <path
-                                                        d="M10.0025 17.5C8.96583 17.5 7.99083 17.3033 7.0775 16.91C6.16472 16.5161 5.37056 15.9817 4.695 15.3067C4.01944 14.6317 3.48472 13.8383 3.09083 12.9267C2.69694 12.015 2.5 11.0403 2.5 10.0025C2.5 8.96472 2.69694 7.98972 3.09083 7.0775C3.48417 6.16472 4.01778 5.37056 4.69167 4.695C5.36556 4.01944 6.15917 3.48472 7.0725 3.09083C7.98583 2.69694 8.96083 2.5 9.9975 2.5C11.0342 2.5 12.0092 2.69694 12.9225 3.09083C13.8353 3.48417 14.6294 4.01806 15.305 4.6925C15.9806 5.36694 16.5153 6.16056 16.9092 7.07333C17.3031 7.98611 17.5 8.96083 17.5 9.9975C17.5 11.0342 17.3033 12.0092 16.91 12.9225C16.5167 13.8358 15.9822 14.63 15.3067 15.305C14.6311 15.98 13.8378 16.5147 12.9267 16.9092C12.0156 17.3036 11.0408 17.5006 10.0025 17.5ZM10 16.6667C10.8139 16.6667 11.5972 16.5239 12.35 16.2383C13.1039 15.9522 13.7886 15.5372 14.4042 14.9933L5.00667 5.59667C4.47333 6.21167 4.06111 6.89583 3.77 7.64917C3.47889 8.4025 3.33333 9.18611 3.33333 10C3.33333 11.8611 3.97917 13.4375 5.27083 14.7292C6.5625 16.0208 8.13889 16.6667 10 16.6667ZM14.9933 14.4033C15.5378 13.7883 15.9525 13.1042 16.2375 12.3508C16.5236 11.5975 16.6667 10.8139 16.6667 10C16.6667 8.13889 16.0208 6.5625 14.7292 5.27083C13.4375 3.97917 11.8611 3.33333 10 3.33333C9.18278 3.33333 8.39556 3.47361 7.63833 3.75417C6.88167 4.03417 6.20111 4.45167 5.59667 5.00667L14.9933 14.4033Z"
-                                                        fill="#9197B3" />
                                                 </svg></button>
                                         </div>
                                     </td>
