--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
   <!-- Navbar Start -->
   <nav class="navbar navbar-expand-lg">
     <div class="container">
-      <a class="navbar-brand" href="/"><img src="assets/images/logo.png" width="145" class="img-fluid" alt="logo"></a>
+      <a class="navbar-brand" href="/"><img src="assets/images/logo.png" width="145" class="img-fluid logo" alt="logo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -33,6 +33,9 @@
           <li class="nav-item">
             <a class="nav-link mx-2 text-primary" href="signup.html">Register</a>
           </li>
+                      <li class="nav-item">
+                        <a class="nav-link mx-2 text-primary" href="facility-listings.html" id="registerBtn">Facility Listings</a>
+                      </li>
         </ul>
         <div class="login-btn">
           <a href="login.html"><button class="btn primary-btn">Login</button></a>
@@ -87,7 +90,7 @@
           <div class="footer-card">
             <div class="footer-img">
               <a href="">
-                <img src="assets/images/logo.png" width="150" alt="" class="img-fluid">
+                <img src="assets/images/logo.png" width="150" alt="" class="img-fluid logo">
               </a>
             </div>
             <div class="footer-content">
